refactoring, add jwt to endpoints

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 firstSteps/
 env/
 rag-poc/__pycache__/
+rag-poc/dbs/__pycache__/
+rag-poc/core/__pycache__/
 rag-poc/routers/__pycache__/
 rag-poc/.env
 rag-poc/_raw_data/
