--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.7.2",
     "mitt": "^3.0.1",
     "vue": "^3.4.21",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "plotly.js-dist-min": "^3.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
